fixing ga events

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,8 @@
 # macOS system files
 .DS_Store
+.idea
 
-# Editor/AI config
-.cursorrules
-
-# Backup files
-bkp.index.html
-
-# Node/npm (if ever used)
 node_modules/
 
-# OS generated files
-Thumbs.db
-
-# Git
-.git/ 
+.git/
+notes/
